--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -17,7 +17,7 @@ body {
 }
 
 #output {
-   
+
     cursor: -webkit-grab;
 }
 
@@ -25,7 +25,7 @@ nav {
     color: #E7E7E7;
 }
 
-nav select{
+nav select {
     background-color: #333;
     color: #E7E7E7;
     padding: 5px;
@@ -33,12 +33,13 @@ nav select{
     width: 100%;
 }
 
-nav .dropdown-menu .details{
+nav .dropdown-menu .details {
     padding-left: 15px;
     width: 500px;
 }
-@media (max-width: 767px){
-    nav .dropdown-menu .details{
+
+@media (max-width: 767px) {
+    nav .dropdown-menu .details {
         padding-left: 15px;
         width: 100%;
     }
@@ -59,5 +60,8 @@ nav .dropdown-menu a:hover {
 }
 
 .grab {
-    cursor: -webkit-grabbing !important;
+    cursor: move;
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
 }
